# Tsubodai

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
Includes/: config.h
Includes/ArgsLib/: ArgsDecl.h  ArgsParse.h  Reflection.h
Includes/CommandLib/: CommandHelper.h  Console.h
Includes/CommandPlugins/: ClearScreen.h  TestCmd.h
Src/ArgsLib/: ArgsDecl.c  ArgsParse.c  Reflection.c
Src/CommandLib/: CommandHelper.c  Console.c
Src/CommandPlugins/: ClearScreen.c  TestCmd.c
